# Resgru

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: d5_example.yaml
docs/: circuit_layout.md
hhd/: __init__.py
hhd/circuit/: __init__.py  hh_circ.py
hhd/data/: __init__.py  datasets.py
hhd/models/: __init__.py  gru_decoder.py
scripts/: generate_data.py  train.py
